...
                        Image(systemName: "plus.circle")
                            .resizable()
                            .renderingMode(.template)
                            .scaledToFill()
                            .frame(width: 100, height: 100)
                            .padding(.bottom)
                        Text("select a photo")
                    }
                }
            }
            .sheet(isPresented: $showImagePicker, onDismiss: loadImage) {
                ImagePicker(selectedImage: $selectedImage)
            }
            .accessibility(identifier: "uploadProfileImage")
            
            if let selectedImage = selectedImage {
                Button {
                    viewModel.uploadImage(selectedImage)
                } label: {
                    Text("Continue")
                        .font(.headline)
                        .foregroundColor(.white)
                        .frame(width:
                                UIDevice.isIPad ? 400 : UIScreen.main.bounds.size.width*0.8, height: 50)
                        .background(Color.theme.dark)
                        .clipShape(RoundedRectangle(cornerRadius: 15))
...
